<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradientone">


    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="17dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/v1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v1"
        app:layout_constraintVertical_bias="0.627"
        app:srcCompat="@drawable/ic_back"
        android:contentDescription="@string/rong" />

    <TextView
        android:id="@+id/pinCode"
        style="@style/Roboto_Bold"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="75dp"
        android:text="@string/pincode"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v1" />
    <TextView
        android:id="@+id/errorPin"
        style="@style/Roboto_Bold"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="139dp"
        android:text="@string/digits"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/pinCode"/>
    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/firstPinNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="108dp"
        android:layout_marginTop="52dp"
        app:box_margin_right="8dp"
        app:box_margin_left="8dp"
        app:height="24dp"
        app:hide_otp="true"
        app:hide_otp_drawable="@drawable/ic_group_8373"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/errorPin"
        app:length="4"
        app:otp_box_background="@drawable/ic_group_8375"
        app:width="24dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="47dp"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/btn_parten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/firstPinNew"
        >

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/btn1"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:foregroundTint="@color/white"
                android:background="@drawable/by_view_button">
                <TextView
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/one"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn2"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="48dp"
                android:background="@android:color/transparent">
                <TextView
                    android:background="@drawable/by_view_button"
                    style="@style/Roboto_Bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/two"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn3"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="48dp"
                android:background="@drawable/by_view_button">
                <TextView
                    style="@style/Roboto_Bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/three"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/btn4"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/by_view_button">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/four"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn5"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="48dp"
                android:background="@drawable/by_view_button">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/five"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn6"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="48dp"
                android:background="@drawable/by_view_button">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/six"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/btn7"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/by_view_button">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/seven"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn8"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="48dp"
                android:background="@drawable/by_view_button">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/eight"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn9"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="48dp"
                android:background="@drawable/by_view_button">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nine"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/btnClear"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/by_view_button">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:drawableTopCompat="@drawable/ic_close"
                    android:paddingTop="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn00"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="48dp"
                android:background="@drawable/by_view_button">
                <TextView
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnDelete"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="48dp"
                android:background="@drawable/by_view_button">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/ic_delete"
                    android:padding="17dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_parten"
        style="@style/Roboto_Bold"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="442dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="47dp"
        android:gravity="center|bottom"
        android:text="@string/parten"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorPin" />

</androidx.constraintlayout.widget.ConstraintLayout>