<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradientone"
    android:id="@+id/view_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="17dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/rong"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/v1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v1"
        app:layout_constraintVertical_bias="0.627"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/tv_verity"
        style="@style/Roboto_Bold"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="@string/verity"
        android:textColor="@color/white"
        android:gravity="center|bottom"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:layout_marginTop="142dp"
        app:layout_constraintTop_toTopOf="@id/v1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/tv_use"
        style="@style/Roboto_Bold"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:text="@string/unlock"
        android:gravity="center|bottom"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="7dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verity"
        />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginTop="47dp"
        android:contentDescription="@string/rong"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_use"
        android:src="@drawable/ic_group_373"/>
    <TextView
        android:id="@+id/errorText"
        style="@style/Roboto_Bold"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="92dp"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/icon"
        />

    <TextView
        android:id="@+id/btn_parten"
        style="@style/Roboto_Bold"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="99dp"
        android:gravity="center|bottom"
        android:text="@string/parten"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_use" />



</androidx.constraintlayout.widget.ConstraintLayout>